# deployment-poetry

./: README.md  app.py  config.py  pyproject.toml  setup.py
data/: app_flight_df.csv
models/: dec.model.joblib
notebooks/: app-prod.ipynb  eda.ipynb  ml-app.ipynb  ml.ipynb  preprocessing.ipynb
src/: categorical_encoder.py  feature_importance.py  preprocessing.py  train_evaluate.py
