[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["eccecarreon <153371886+eccecarreon@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llvmlite = "^0.43.0"
numba = "^0.60.0"
numpy = "2.0.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
imblearn = "^0.0"
lightgbm = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
